implementedf irst failing test for smallest parcel dimension

--- a/Courier Kata/CourierKata.Services.Tests/CourierKata.Services.Tests.csproj
+++ b/Courier Kata/CourierKata.Services.Tests/CourierKata.Services.Tests.csproj
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CourierKata.Services\CourierKata.Services.csproj" />
   </ItemGroup>
 
 </Project>
